# verna-rag-app

./: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
core/: chain.py  loader.py  vectorstore.py
ui/: chat.py  sidebar.py
