[project]
name = "verna-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.15.0",
    "chromadb==1.5.9",
    "docx2txt==0.9",
    "langchain==1.3.11",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "langchain-text-splitters==1.1.2",
    "lxml==6.1.1",
    "openai==2.43.0",
    "pypdf==6.14.2",
    "python-docx==1.2.0",
    "requests==2.34.2",
    "streamlit==1.58.0",
    "tiktoken==0.13.0",
]
